syntax = "proto3";
package icecanedbpb;

// invoked by candidates to gather votes
message RequestVoteRequest {
    // candidates term
    uint64 term = 1;

    // candidate requesting the vote
    uint64 candidate_id = 2;

    // index of candidate's last log entry
    uint64 last_log_index = 3;

    // term of candidate's last log entry
    uint64 last_log_term = 4;
}

// response to the request vote rpc
message RequestVoteResponse {
    // current_term of the voter, for the candidate to update itself
    uint64 term = 1;

    // true if the vote was granted 
    bool vote_granted = 2;

    // id of the voter who received the request.
    // not mentioned in the paper but might be good for debugging.
    uint64 voter_id = 3;
}
